# Matrixes

./: CMakeLists.txt  README.md  genTests.sh
inc/: matrix.hpp  myVector.hpp
src/: generateTest.cpp  main.cpp
tests/: matrix_tests.cpp
